feat(github): add installation management APIs
- Add authenticated GitHub installation listing
- Add installation ownership authorization
- Add admin installation access
- Add installation lookup and deletion endpoints
- Add service and controller tests